fix page scroll on ie

--- a/app/assets/stylesheets/public_website/global.css.scss
+++ b/app/assets/stylesheets/public_website/global.css.scss
@@ -20,8 +20,10 @@ body {
 }
 
 .stop-scrolling {
-  height: 100%;
-  overflow: hidden;
+  // height: 100%;
+  // overflow: hidden;
+  position: fixed; 
+  overflow-y:scroll;
 }
 
 .body-content {
